welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( (!isMorning) && (isMom) && (!isAsleep) ) { true }
        ^